@@ -70,6 +70,9 @@ Avro 1.5.0 (unreleased)
     AVRO-705. Java: Fix DirectBinaryDecoder to correctly reinitialize.
     (thiru via cutting)
 
+    AVRO-710. Java: Add bounds checking to GenericData.Array#get(int).
+    (Bo Shi via cutting)
+
 Avro 1.4.1 (13 October 2010)
 
   NEW FEATURES
